--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,11 @@ mypy = "*"
 mysqlclient = "*"
 python-dotenv = "*"
 black = "*"
+djangorestframework = "*"
+channels = "*"
+gunicorn = "*"
+uvicorn = "*"
+pika = "*"
 
 [dev-packages]
 
