--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,69 @@
-upstream django {
-    server web:8000;
+user  nginx;
+worker_processes auto;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
 }
 
-server {
-    listen 80;
-    server_name localhost;
+http{
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    location / {
-        proxy_pass http://django;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+    server_tokens off;
+    keepalive_timeout 75;
 
-    location /ws/ {
-        proxy_pass http://web:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    server {
+        listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
+
+        # Django 정적 파일 설정
+        location /static/ {
+            alias /path/to/static/files/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
+            expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
+        }
+
+        # Django 미디어 파일 설정
+        location /media/ {
+            alias /path/to/media/files/; # Django의 미디어 파일이 저장된 실제 경로로 변경해야 합니다.
+            expires 90d; # 미디어 파일에 대한 캐시 만료 시간을 90일로 설정합니다.
+        }
+
+        # # Frontend 설정
+        # location / {
+        #     proxy_pass http://localhost:3000; # 여기서 'frontend'는 Frontend 서비스의 호스트 이름이나 IP 주소입니다.
+        #     # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
+
+        # Django 설정 (API와 Admin 페이지)
+        location ~ ^/(api|admin) {
+            proxy_pass http://localhost:8000; # 여기서 'django'는 Django 서비스의 호스트 이름이나 IP 주소입니다.
+            # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # gzip 설정
+        gzip on; # gzip 압축 활성화
+        gzip_disable "msie6"; # IE6에서 gzip 압축 비활성화
+        gzip_vary on; # Vary 헤더를 통해 프록시 서버에 압축된 콘텐츠를 캐시하도록 지시
+        gzip_proxied any; # 모든 프록시된 응답에 대해 gzip 압축 적용
+        gzip_comp_level 6; # gzip 압축 레벨 설정 (1이 가장 낮고 9가 가장 높음)
+        gzip_buffers 16 8k; # 압축을 위한 버퍼 크기 설정
+        gzip_http_version 1.1; # HTTP 버전 1.1 이상에서 gzip 압축을 사용하도록 설정
+        gzip_min_length 256; # 이 길이 이상의 응답에 대해서만 gzip 압축 적용
+        # 압축 적용 대상 MIME 타입 설정
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     }
 }
+
