chore : docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # .env로 이름 변경하시고 사용하시면 됩니다!
 SECRET_KEY=
+
 DB_USERNAME=
 DB_DATABASE=
 DB_USER_PASSWORD=
+DB_ROOT_PASSWORD=
+
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
