--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,8 +23,13 @@ http{
 
         # Django 정적 파일 설정
         location /static/ {
-            alias /path/to/static/files/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
-            expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
+            alias /staticfiles/;
+            expires 30d;
+        }
+
+        location /collected_statics/ {
+            alias /backend/collected_statics/;
+            expires 30d;
         }
 
         # Django 미디어 파일 설정
@@ -35,7 +40,7 @@ http{
 
         # # Frontend 설정
         # location / {
-        #     proxy_pass http://localhost:3000; # 여기서 'frontend'는 Frontend 서비스의 호스트 이름이나 IP 주소입니다.
+        #     proxy_pass http://frontend:3000; # 여기서 'frontend'는 Frontend 서비스의 호스트 이름이나 IP 주소입니다.
         #     # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
         #     proxy_set_header Host $host;
         #     proxy_set_header X-Real-IP $remote_addr;
@@ -45,7 +50,7 @@ http{
 
         # Django 설정 (API와 Admin 페이지)
         location ~ ^/(api|admin) {
-            proxy_pass http://localhost:8000; # 여기서 'django'는 Django 서비스의 호스트 이름이나 IP 주소입니다.
+            proxy_pass http://django:8000; # 여기서 'django'는 Django 서비스의 호스트 이름이나 IP 주소입니다.
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
