--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,7 +22,8 @@ RUN python -m pip install --upgrade pip
 RUN pip install pipenv
 RUN pipenv install --deploy --ignore-pipfile
 
-RUN pipenv run python manage.py collectstatic --no-input
-
 # 기다림 스크립트 실행 후 gunicorn 실행
-CMD /wait && pipenv run python manage.py migrate && pipenv run gunicorn -c gunicorn.conf.py config.asgi:application --bind 0.0.0.0:8000
+# CMD /wait && pipenv run python manage.py migrate && pipenv run python manage.py collectstatic --no-input && pipenv run gunicorn -c gunicorn.conf.py config.asgi:application --bind 0.0.0.0:8000
+
+# 개발용 서버 실행
+CMD /wait && pipenv run python manage.py migrate && pipenv run python manage.py collectstatic --no-input && pipenv run python manage.py runserver
