--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,35 +1,35 @@
-user  nginx;
-worker_processes auto;
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+user  nginx; # NGINX 프로세스를 실행할 사용자를 지정합니다.
+worker_processes auto; # NGINX 프로세스의 수를 지정합니다.
+error_log  /var/log/nginx/error.log warn; # 에러 로그 파일의 경로를 지정합니다.
+pid        /var/run/nginx.pid; # NGINX 프로세스의 PID 파일의 경로를 지정합니다.
 
 events {
-    worker_connections  1024;
+    worker_connections  1024; # 동시 접속 처리 수
 }
 
 http{
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    include /etc/nginx/mime.types; # MIME 타입 설정 파일을 포함합니다.
+    default_type application/octet-stream; # 기본 MIME 타입을 설정합니다.
 
-    server_tokens off;
-    keepalive_timeout 75;
+    server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
+    keepalive_timeout 75; # keepalive 타임아웃을 75초로 설정합니다.
 
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
     '$status $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
+    '"$http_user_agent" "$http_x_forwarded_for"'; # 로그 포맷을 설정합니다.
 
     server {
         listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
 
         # Django 정적 파일 설정
         location /static/ {
-            alias /staticfiles/;
-            expires 30d;
+            alias /staticfiles/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
+            expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
         }
 
         location /collected_statics/ {
-            alias /backend/collected_statics/;
-            expires 30d;
+            alias /backend/collected_statics/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
+            expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
         }
 
         # Django 미디어 파일 설정
@@ -38,18 +38,18 @@ http{
             expires 90d; # 미디어 파일에 대한 캐시 만료 시간을 90일로 설정합니다.
         }
 
-        # # Frontend 설정
-        # location / {
-        #     proxy_pass http://frontend:3000; # 여기서 'frontend'는 Frontend 서비스의 호스트 이름이나 IP 주소입니다.
-        #     # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        # Frontend 설정
+        location / {
+            proxy_pass http://frontend:3000; # 여기서 'frontend'는 Frontend 서비스의 호스트 이름이나 IP 주소입니다.
+            # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
         # Django 설정 (API와 Admin 페이지)
-        location ~ ^/(api|admin) {
+        location /api/ {
             proxy_pass http://django:8000; # 여기서 'django'는 Django 서비스의 호스트 이름이나 IP 주소입니다.
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $host;
