fix : nginx 오류 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ events {
     worker_connections  1024; # 동시 접속 처리 수
 }
 
-http{
+http {
     include /etc/nginx/mime.types; # MIME 타입 설정 파일을 포함합니다.
     default_type application/octet-stream; # 기본 MIME 타입을 설정합니다.
 
@@ -23,12 +23,7 @@ http{
 
         # Django 정적 파일 설정
         location /static/ {
-            alias /staticfiles/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
-            expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
-        }
-
-        location /collected_statics/ {
-            alias /backend/collected_statics/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
+            alias /static/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
             expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
         }
 
