fix : nginx 오류 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ http {
 
         # Django 정적 파일 설정
         location /static/ {
-            alias /static/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
+            alias /staticfiles/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
             expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
         }
 
