fix : websocket error해결, cors, nginx 설정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,8 +18,28 @@ http {
     '$status $body_bytes_sent "$http_referer" '
     '"$http_user_agent" "$http_x_forwarded_for"'; # 로그 포맷을 설정합니다.
 
+    map $uri $custom_content_type {
+        default           text/html;
+        ~(.*.json)$       application/json;
+        ~(.*.css)$        text/css;
+        ~(.*.js)$         application/javascript;
+        ~(.*.[jpg|jpeg])$ image/jpeg;
+        ~(.*.gif)$        image/gif;
+        ~(.*.png)$        image/png;
+        ~(.*.ico)$        image/x-icon;
+        ~(.*.woff)$       application/font-woff;
+        ~(.*.mp4)$        video/mp4;
+        ~(.*.xyz)$        application/xyz;
+    } # 커스텀 MIME 타입을 설정합니다.
+
+    upstream channels-backend {
+        server localhost:8001;
+    }
+
     server {
         listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
+
+        location = /favicon.ico { access_log off; log_not_found off; }
 
         # Django 정적 파일 설정
         location /static/ {
@@ -43,7 +63,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Django 설정 (API와 Admin 페이지)
+        # Django 설정 (API페이지)
         location /api/ {
             proxy_pass http://django:8000; # 여기서 'django'는 Django 서비스의 호스트 이름이나 IP 주소입니다.
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
@@ -52,6 +72,21 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        # Django 설정 (웹소켓)
+        location /ws/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_redirect off;
+            proxy_pass http://django:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_hide_header Content-Type;
+            add_header Content-Type $custom_content_type;
+        }   
 
         # gzip 설정
         gzip on; # gzip 압축 활성화
