--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -12,11 +12,14 @@ black = "*"
 djangorestframework = "*"
 channels = "*"
 gunicorn = "*"
-uvicorn = "*"
 pika = "*"
 pymysql = "*"
 cryptography = "*"
 pika-stubs = "==0.1.3"
+uvicorn = {version = "*", extras = ["standard"]}
+django-cors-headers = "*"
+asgiref = "*"
+channels-redis = "*"
 
 [dev-packages]
 
