chore : 장고에 그라파나와 프로메테우스 연동

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -20,6 +20,7 @@ uvicorn = {version = "*", extras = ["standard"]}
 django-cors-headers = "*"
 asgiref = "*"
 channels-redis = "*"
+django-prometheus = "*"
 
 [dev-packages]
 
