--- a/prometheus/config/prometheus.yml
+++ b/prometheus/config/prometheus.yml
@@ -34,7 +34,7 @@ scrape_configs:
 
     # 실제 scrap 하는 타겟에 관한 설정
     static_configs:
-      - targets: ['django:8000','prometheus:9090' ] ## prometheus, node-exporter, cadvisor
+      - targets: ['django:8000'] ## prometheus, node-exporter, cadvisor
         labels: # 옵션 - scrap 해서 가져올 metrics 들 전부에게 붙여줄 라벨
           service : 'monitor-1'
 
