--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -20,6 +20,10 @@ uvicorn = {version = "*", extras = ["standard"]}
 django-cors-headers = "*"
 asgiref = "*"
 channels-redis = "*"
+celery = "*"
+django-celery-beat = "*"
+django-celery-results = "*"
+openai = "*"
 
 [dev-packages]
 
