--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -20,6 +20,7 @@ uvicorn = {version = "*", extras = ["standard"]}
 django-cors-headers = "*"
 asgiref = "*"
 channels-redis = "*"
+drf-yasg = "*"
 
 [dev-packages]
 
