--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "eslint-config-prettier": "^8.8.0",
+    "mobx-react-lite": "^4.0.3",
     "prettier": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "recoil": "^0.7.7"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
