--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^3.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
@@ -35,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-testing-library": "^5.11.0",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
