--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "lint:fix": "eslint --fix ./src"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "eslint-config-prettier": "^8.8.0",
-    "mobx-react-lite": "^4.0.3",
+    "lodash": "^4.17.21",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
     "prettier": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -23,6 +26,11 @@
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.22.7",
+    "@babel/preset-env": "^7.22.9",
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
