--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,7 +7,7 @@ on:
     branches: ["feature"]
 
 jobs:
-  backend-test:
+  backend:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python 3.11
         uses: actions/setup-python@v2
         with:
-            python-version: 3.11
+          python-version: 3.11
 
       - name: Install pipenv
         run: python -m pip install pipenv
@@ -36,7 +36,7 @@ jobs:
         working-directory: backend
         run: pipenv run python manage.py test
 
-  frontend-test:
+  frontend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
