fix : migration 명령어 추가

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,7 +46,10 @@ jobs:
 
       - name: Run tests
         working-directory: backend
-        run: pipenv run python manage.py test
+        run: |
+          pipenv run python manage.py makemigrations
+          pipenv run python manage.py migrate
+          pipenv run python manage.py test
 
   frontend:
     runs-on: ubuntu-latest
