--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ OPENAI_API_KEY=
 
 NAVER_CLIENT_ID=
 NAVER_CLIENT_SECRET=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
+AWS_S3_REGION_NAME=
