--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
     } # 커스텀 MIME 타입을 설정합니다.
 
     upstream channels-backend {
-        server localhost:8001;
+        server localhost:8000;
     }
 
     server {
@@ -47,11 +47,11 @@ http {
             expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
         }
 
-        # Django 미디어 파일 설정
-        location /media/ {
-            alias /path/to/media/files/; # Django의 미디어 파일이 저장된 실제 경로로 변경해야 합니다.
-            expires 90d; # 미디어 파일에 대한 캐시 만료 시간을 90일로 설정합니다.
-        }
+        # # Django 미디어 파일 설정
+        # location /media/ {
+        #     alias /path/to/media/files/; # Django의 미디어 파일이 저장된 실제 경로로 변경해야 합니다.
+        #     expires 90d; # 미디어 파일에 대한 캐시 만료 시간을 90일로 설정합니다.
+        # }
 
         # Frontend 설정
         location / {
