--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
     } # 커스텀 MIME 타입을 설정합니다.
 
     upstream channels-backend {
-        server localhost:8000;
+        server django:8000;
     }
 
     server {
