--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -62,7 +62,7 @@ jobs:
           echo "AWS_S3_REGION_NAME=\"${{ secrets.AWS_S3_REGION_NAME }}\"" >> .env
 
       - name: Copy env file to EC2
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@7af00892de6f8397c5c3393cfb3b32ae7f91b94b
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
@@ -72,7 +72,7 @@ jobs:
           target: "/compose"
 
       - name: Copy docker-compose.prod.yml to EC2
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@7af00892de6f8397c5c3393cfb3b32ae7f91b94b
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
