fix : grafana 에러 해결용

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -71,6 +71,16 @@ jobs:
           source: ".env"
           target: "compose"
 
+      - name: Copy Grafana files to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_KEY }}
+          port: ${{ secrets.EC2_PORT }}
+          source: "./grafana/grafana.ini"
+          target: "compose/grafana"
+
       - name: Copy docker-compose.prod.yml to EC2
         uses: appleboy/scp-action@master
         with:
