--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,6 +169,77 @@ services:
         max-size: "8m"
         max-file: "10"
 
+  elasticsearch:
+    build:
+      context: docker-example/logging-example/elasticsearch
+      args:
+        ELASTIC_VERSION: 8.5.2
+    volumes:
+      - ./docker-example/logging-example/elasticsearch/config:/usr/share/elasticsearch/config:ro,Z
+      - elasticsearch:/usr/share/elasticsearch/data:Z
+    ports:
+      - 9200:9200
+      - 9300:9300
+    environment:
+      node.name: elasticsearch
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ELASTIC_PASSWORD: changeme
+      discovery.type: single-node
+    restart: unless-stopped
+
+  logstash:
+    build:
+      context: docker-example/logging-example/logstash
+      args:
+        ELASTIC_VERSION: 8.5.2
+    volumes:
+      - /Users/byeongseon/Desktop/Bootcamp/Project/logging-example/logstash/config:/usr/share/logstash/config:ro,Z
+      - /Users/byeongseon/Desktop/Bootcamp/Project/logging-example/logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+    ports:
+      - 5044:5044
+      - 50000:50000/tcp
+      - 50000:50000/udp
+      - 9600:9600
+    environment:
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
+      LOGSTASH_INTERNAL_PASSWORD: changeme
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
+
+  kibana:
+    build:
+      context: docker-example/logging-example/kibana
+      args:
+        ELASTIC_VERSION: 8.5.2
+    volumes:
+      - /Users/byeongseon/Desktop/Bootcamp/Project/logging-example/kibana/config:/usr/share/kibana/config:ro,Z
+    ports:
+      - 5601:5601
+    environment:
+      KIBANA_SYSTEM_PASSWORD: changeme
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
+
+  filebeat:
+    build:
+      context: docker-example/logging-example/filebeat
+      args:
+        ELASTIC_VERSION: 8.5.2
+    entrypoint: "filebeat -e -strict.perms=false"
+    volumes:
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro,Z
+      - /var/run/docker.sock:/var/run/docker.sock:ro,Z
+      - ./docker-example/logging-example/filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro,Z
+      - ./nginx/log:/var/log/nginx # nginx log path (require same option on nginx container)
+    depends_on:
+      - logstash
+      - elasticsearch
+      - kibana
+
+
 volumes:
+  elasticsearch:
   staticfiles:
-  grafana-data: {}
+  grafana-data: { }
