--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -146,6 +146,77 @@ services:
         max-size: "8m"
         max-file: "10"
 
+    elasticsearch:
+      build:
+        context: ./logging/elasticsearch
+        dockerfile: Dockerfile
+        args:
+          ELASTIC_VERSION: 8.5.2
+      volumes:
+        - ./logging/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+        - elasticsearch:/usr/share/elasticsearch/data:Z
+      ports:
+        - 9200:9200
+        - 9300:9300
+      environment:
+        node.name: elasticsearch
+        ES_JAVA_OPTS: -Xms512m -Xmx512m
+        ELASTIC_PASSWORD: changeme
+        discovery.type: single-node
+      restart: unless-stopped
+
+  logstash:
+    build:
+      context: ./logging/logstash
+      dockerfile: Dockerfile
+      args:
+        ELASTIC_VERSION: 8.5.2
+    volumes:
+      - ./logging/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
+      - ./logging/logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+    ports:
+      - 5044:5044
+      - 50000:50000/tcp
+      - 50000:50000/udp
+      - 9600:9600
+    environment:
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
+      LOGSTASH_INTERNAL_PASSWORD: changeme
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
+
+  kibana:
+    build:
+      context: ./logging/kibana
+      dockerfile: Dockerfile
+      args:
+        ELASTIC_VERSION: 8.5.2
+    volumes:
+      - ./logging/kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
+    ports:
+      - 5601:5601
+    environment:
+      KIBANA_SYSTEM_PASSWORD: changeme
+    depends_on:
+      - elasticsearch
+    restart: unless-stopped
+
+  filebeat:
+    build:
+      context: ./logging/filebeat
+      dockerfile: Dockerfile
+      args:
+        ELASTIC_VERSION: 8.5.2
+    entrypoint: "filebeat -e -strict.perms=false"
+    volumes:
+      - ./logging/filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - ./nginx/log:/var/log/nginx # nginx log path (require same option on nginx container)
+    depends_on:
+      - logstash
+      - elasticsearch
+      - kibana
+
 volumes:
   staticfiles: {}
   grafana-data: {}
