HOTFIX : docker-compose.monitor 파일 분리

--- a/logging/logstash/pipeline/logstash.conf
+++ b/logging/logstash/pipeline/logstash.conf
@@ -34,7 +34,7 @@ output {
    index => "weblogs-%{+YYYY.MM.dd}"
    document_type => "nginx_logs"
    user     => "elastic"
-   password => "changeme"
+   password => "${ES_PASSWORD}"
  }
  stdout { codec => rubydebug }
 }
